--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,10 @@ h5 {
 	grid-area: per5;
 	background-color: rgb(125, 157, 156);
 }
+
+@media (max-width: 550px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+	}
+}
